Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40927

Crash in Qt Quick on Android

XMLWordPrintable

    • bfee76bdc96cfa8b4decf6d099ff690446d2f8eb

      Running the clocks demo on android causes a SIGBUS, with the attached console output. The crash does not happen when running in the debugger, so it is not possible to get a proper stack trace.

      git bisect points at this commit: d9f33ccdef985badc56fd8940373748626beffc7
      "V4 JIT: parameterize the prologue and epilogue generation"

        For Gerrit Dashboard: QTBUG-40927
        # Subject Branch Project Status CR V

            erikv Erik Verbruggen
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes